# napari-moltrack

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
src/moltrack/: __init__.py  _widget.py  napari.yaml
src/moltrack/GUI/: gui.py  widget_ui.py  widget_ui.ui
src/moltrack/_tests/: test_widget.py
src/moltrack/bactfit/: cell.py  fileIO.py  fit.py  postprocess.py  preprocess.py  utils.py
src/moltrack/dev/: cell_render.py  cell_shapes.json
src/moltrack/funcs/: bactfit_utils.py  cell_events.py  cell_heatmap_utils.py  compute_utils.py  diffusion_utils.py  events_utils.py  export_utils.py  import_utils.py  loc_filter_utils.py  management_utils.py  microbetracker_utils.py  oufti_utils.py  picasso_detect_utils.py  picasso_render_utils.py  pixstats_utils.py  segmentation_events.py  segmentation_utils.py  traces_utils.py  track_filter_utils.py  tracking_utils.py  trackplot_utils.py  trackstats_utils.py  transform_utils.py  undrift_utils.py
src/pygpufit/: gpufit.py  version.py
