[project]
name = "napari-moltrack"
dynamic = ["version"]
description = "A user-friendly SMLM analysis platfrom for napari, which includes single molecule localisation, tracking, and analysis features."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Piers Turner"},
  {email = "piers.turner@physics.ox.ac.uk"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "napari[all]==0.5.0",
    "bactfit >= 0.1.6",
    "numpy",
    "magicgui",
    "qtpy",
    "scipy",
    "pyqtgraph",
    "picassosr==0.8.0",
    "pandas",
    "matplotlib >= 3.7.0",
    "scipy",
    "opencv-python",
    "tqdm",
    "originpro",
    "pyqt5-tools",
    "torch",
    "torchvision",
    "cellpose == 3.0.1",
    "omnipose",
    "trackpy",
    "shapely",
    "astropy",
    "mat4py",
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari",
    "pyqt5",
]

[project.entry-points."napari.manifest"]
napari-moltrack = "moltrack:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/piedrro/napari-moltrack/issues"
"Documentation" = "https://github.com/piedrro/napari-moltrack#README.md"
"Source Code" = "https://github.com/piedrro/napari-moltrack"
"User Support" = "https://github.com/piedrro/napari-moltrack/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "moltrack.__init__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml","*.dll"]

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]
